server side code fleshed out a bit more